# 421project3

./: .gitignore  Cargo.toml  README.md  build.sh  package-lock.json  package.json  public.db  run.sh
client/: .gitignore  Cargo.toml
client/src/: board.rs
frontend/: Cargo.toml
frontend/src/: Connect4Computer.rs  Connect4Human.rs  HowToConnect4.rs  HowToToot.rs  ScoreBoard.rs  Scores.rs  TootOttoComputer.rs  TootOttoHuman.rs  connect4computer.rs  connect4human.rs  howToConnect4.rs  howToToot.rs  humanplayer.rs  landing.rs  main.rs  route.rs  scoreboard.rs  scores.rs  sidebar.rs  tootOttoComputer.rs  tootOttoHuman.rs
game_logic/src/: main.rs  toototto.rs
page/: index.html
server/: Cargo.toml  HowToToot.html  console.js  index.html  public.db  styles.css
server/src/: main.rs
server/src/app_server/: app.rs
server/src/app_server/models/: db_object.rs  game.rs  user.rs
server/src/app_server/routes/: authentication.rs  index.rs  users.rs
server/src/static/: app.js  app.wasm  index.html
server/static/: index.html
src/: board.rs  board_mod.rs  connect4.rs  main.rs  toototto.rs
src/app_server/: app.rs  mod.rs
src/app_server/models/: db_object.rs  game.rs  mod.rs  user.rs
src/app_server/routes/: api.rs  authentication.rs  index.rs  mod.rs  users.rs
