[package]
name = "project3"
version = "0.1.0"
authors = ["Phlana <joshua.chang422@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
mongodb = "0.9.0"
bson = "0.14.0"
serde = { version = "1.0", features = ["derive"] }