[package]
name = "project3"
version = "0.1.0"
authors = ["Phlana <joshua.chang422@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"

actix-files = "0.2.1"
actix-session = "0.3.0"
actix-utils = "1.0.3"

futures = "0.3.1"
env_logger = "0.7"
bytes = "0.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
bcrypt = "0.7"
r2d2 = "0.8.8"
r2d2_sqlite = "0.15.0"


[dependencies.rusqlite]
version = "0.22.0"
features = ["bundled"]